Make _cairo_slope_compare return a non-zero result for slopes that differ by pi

This was an initial attempt to fix the infinite loop bug
described here:

	Infinite loop when scaling very small values using 24.8
	http://bugs.freedesktop.org/show_bug.cgi?id=14280

This doesn't actually fix that bug, but having a more robust
comparison function can only be a good thing.